@@ -47,6 +47,11 @@ https://github.com/networkupstools/nut/milestone/11
    are analyzed and lead to layman worded situation reports in these programs.
    [issue #1782, PR #2384]
 
+ - drivers started with the `-FF` command-line option (e.g. wrapped into the
+   systemd units to stay "foregrounded" *and* save a PID file anyway) should
+   now also handle an existing PID file to interact with the earlier instance
+   of the driver program, if still running (e.g. started manually). [#2384]
+
  - riello_ser updates:
    * added `localcalculation` option to compute `battery.runtime` and
      `battery.charge` if the device provides bogus values [issue #2390,
